# TrulySeamless3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TS3DConfig.cmake.in
cli/: CMakeLists.txt  main.cc
cmake/: FindOpenVolumeMesh.cmake  macrOS.cmake
include/TS3D/: helpers.h  trulyseamless.h
include/TrulySeamless3D/: timer.h  trulyseamless.h
src/: CMakeLists.txt  helpers.cc  timer.cc  trulyseamless.cc
